# shorthills

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  PROMPTS.md  README.md  docker-compose.yml  golden_set.csv  golden_set.json  pyproject.toml  render.yaml
config/: elasticsearch-index.json  hybrid-query.json
evaluation_assignment/: evaluation_report.json  evaluation_report.md
examples/: corpus_100.yaml  sources.yaml
legal_ingest/: __init__.py  answer.py  api.py  chunk.py  citations.py  cli.py  embeddings.py  evaluate.py  extract.py  fetch.py  graph.py  indexing.py  models.py  okf.py  pipeline.py  search.py
output/: graph_edges.jsonl  graph_nodes.jsonl  run.json
output/okf/: index.md
output/okf/act/: american-rescue-plan-act-of-2021-a782a0d6.md  americans-with-disabilities-act-of-1990-413e1bb2.md  bipartisan-safer-communities-act-e53f1d49.md  class-action-fairness-act-of-2005-38871a63.md  consolidated-appropriations-act-2024-a27216b5.md  continuing-appropriations-act-2024-and-other-extensions-act-9630d237.md  coronavirus-aid-relief-and-economic-security-act-3286353c.md  dodd-frank-wall-street-reform-and-consumer-protection-act-c17a8356.md  emergency-economic-stabilization-act-of-2008-a1266992.md  fiscal-responsibility-act-of-2023-cf6e4616.md  further-consolidated-appropriations-act-2024-7f8bfaf7.md  health-care-and-education-reconciliation-act-of-2010-d88cf9e1.md  health-insurance-portability-and-accountability-act-of-1996-d7f74341.md  inflation-reduction-act-of-2022-a9a7e55c.md  (+10 more)
static/: index.html
tests/: test_pipeline.py
(+68 files in other folders)
